# openapi/project.yml
@@ -184,6 +184,26 @@ paths:
         500:
           description: Unable to delete project.
 
+  /project/{projectId}/cost:
+    get:
+      tags:
+        - project
+      operationId: GetProjectCost
+      description: Returns the current cost for the project.
+      parameters:
+        - name: projectId
+          in: path
+          type: string
+          required: true
+          description: The ID of the project to query.
+      responses:
+        200:
+          description: Returns the project cost object.
+          schema:
+            $ref: '#/definitions/Cost'
+        404:
+          description: Invalid project ID was provided.
+
   /project/{projectId}/usage:
     get:
       tags:
