# server/api/project/get_project_cost.go
@@ -1,0 +1,69 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package project
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime/middleware"
+)
+
+// GetProjectCostHandlerFunc turns a function with the right signature into a get project cost handler
+type GetProjectCostHandlerFunc func(GetProjectCostParams, interface{}) middleware.Responder
+
+// Handle executing the request and returning a response
+func (fn GetProjectCostHandlerFunc) Handle(params GetProjectCostParams, principal interface{}) middleware.Responder {
+	return fn(params, principal)
+}
+
+// GetProjectCostHandler interface for that can handle valid get project cost params
+type GetProjectCostHandler interface {
+	Handle(GetProjectCostParams, interface{}) middleware.Responder
+}
+
+// NewGetProjectCost creates a new http.Handler for the get project cost operation
+func NewGetProjectCost(ctx *middleware.Context, handler GetProjectCostHandler) *GetProjectCost {
+	return &GetProjectCost{Context: ctx, Handler: handler}
+}
+
+/*
+	GetProjectCost swagger:route GET /project/{projectId}/cost project getProjectCost
+
+Returns the current cost for the project.
+*/
+type GetProjectCost struct {
+	Context *middleware.Context
+	Handler GetProjectCostHandler
+}
+
+func (o *GetProjectCost) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
+	route, rCtx, _ := o.Context.RouteInfo(r)
+	if rCtx != nil {
+		*r = *rCtx
+	}
+	var Params = NewGetProjectCostParams()
+	uprinc, aCtx, err := o.Context.Authorize(r, route)
+	if err != nil {
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+	if aCtx != nil {
+		*r = *aCtx
+	}
+	var principal interface{}
+	if uprinc != nil {
+		principal = uprinc.(interface{}) // this is really a interface{}, I promise
+	}
+
+	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+
+	res := o.Handler.Handle(Params, principal) // actually handle the request
+	o.Context.Respond(rw, r, route.Produces, route, res)
+
+}
