# server/api/project/get_project_cost_parameters.go
@@ -1,0 +1,71 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package project
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/runtime/middleware"
+	"github.com/go-openapi/strfmt"
+)
+
+// NewGetProjectCostParams creates a new GetProjectCostParams object
+//
+// There are no default values defined in the spec.
+func NewGetProjectCostParams() GetProjectCostParams {
+
+	return GetProjectCostParams{}
+}
+
+// GetProjectCostParams contains all the bound params for the get project cost operation
+// typically these are obtained from a http.Request
+//
+// swagger:parameters GetProjectCost
+type GetProjectCostParams struct {
+
+	// HTTP Request Object
+	HTTPRequest *http.Request `json:"-"`
+
+	/*The ID of the project to query.
+	  Required: true
+	  In: path
+	*/
+	ProjectID string
+}
+
+// BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
+// for simple values it will use straight method calls.
+//
+// To ensure default values, the struct must have been initialized with NewGetProjectCostParams() beforehand.
+func (o *GetProjectCostParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
+	var res []error
+
+	o.HTTPRequest = r
+
+	rProjectID, rhkProjectID, _ := route.Params.GetOK("projectId")
+	if err := o.bindProjectID(rProjectID, rhkProjectID, route.Formats); err != nil {
+		res = append(res, err)
+	}
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+// bindProjectID binds and validates parameter ProjectID from path.
+func (o *GetProjectCostParams) bindProjectID(rawData []string, hasKey bool, formats strfmt.Registry) error {
+	var raw string
+	if len(rawData) > 0 {
+		raw = rawData[len(rawData)-1]
+	}
+
+	// Required: true
+	// Parameter is provided by construction from the route
+	o.ProjectID = raw
+
+	return nil
+}
