# server/api/project/get_project_cost_responses.go
@@ -1,0 +1,84 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package project
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/dalet-oss/kowabunga-api/models"
+)
+
+// GetProjectCostOKCode is the HTTP code returned for type GetProjectCostOK
+const GetProjectCostOKCode int = 200
+
+/*
+GetProjectCostOK Returns the project cost object.
+
+swagger:response getProjectCostOK
+*/
+type GetProjectCostOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Cost `json:"body,omitempty"`
+}
+
+// NewGetProjectCostOK creates GetProjectCostOK with default headers values
+func NewGetProjectCostOK() *GetProjectCostOK {
+
+	return &GetProjectCostOK{}
+}
+
+// WithPayload adds the payload to the get project cost o k response
+func (o *GetProjectCostOK) WithPayload(payload *models.Cost) *GetProjectCostOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get project cost o k response
+func (o *GetProjectCostOK) SetPayload(payload *models.Cost) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetProjectCostOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// GetProjectCostNotFoundCode is the HTTP code returned for type GetProjectCostNotFound
+const GetProjectCostNotFoundCode int = 404
+
+/*
+GetProjectCostNotFound Invalid project ID was provided.
+
+swagger:response getProjectCostNotFound
+*/
+type GetProjectCostNotFound struct {
+}
+
+// NewGetProjectCostNotFound creates GetProjectCostNotFound with default headers values
+func NewGetProjectCostNotFound() *GetProjectCostNotFound {
+
+	return &GetProjectCostNotFound{}
+}
+
+// WriteResponse to the client
+func (o *GetProjectCostNotFound) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(404)
+}
